ocp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: '{APP_NAME}'
  labels:
    appname: '{APP_NAME}'
  annotations:
    openshift.io/scc: restricted
spec:
  replicas: 1
  selector:
    matchLabels:
      app: '{APP_NAME}'
  template:
    metadata:
      labels:
        app: '{APP_NAME}'
    spec:
      restartPolicy: Always
      serviceAccountName: deployer
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: '{APP_NAME}'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: '{ARTIFACTORY_REPO}/{IMG_NAME}:{IMG_TAG}'
      serviceAccount: deployer
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: '{APP_NAME}-secret'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
---
kind: Service
apiVersion: v1
metadata:
  name: {APP_NAME}
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: {APP_NAME}
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: {APP_NAME}
  annotations:
    openshift.io/host.generated: 'true'
    haproxy.router.openshift.io/timeout: 180s
spec:
  to:
    kind: Service
    name: {APP_NAME}
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
